// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot - div app 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Laura
  </h1>
  <h3>
    Caceres
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Elden Ring,Smash,Metal Gear
  </p>
  <p>
    4
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: green; border-radius: 20px; padding: 10px; margin-top: 50px;"
  >
    {"zipCode":"ABC-123","country":"Colombia"}
     
  </p>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Laura
    </h1>
    <h3>
      Caceres
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Elden Ring,Smash,Metal Gear
    </p>
    <p>
      4
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: green; border-radius: 20px; padding: 10px; margin-top: 50px;"
    >
      {"zipCode":"ABC-123","country":"Colombia"}
       
    </p>
  </div>
</div>
`;
